--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="greetings">Hello $name, How you feel today?</string>
     <string name="title_article">Explore Article</string>
+    <string name="signin">Sign In</string>
+    <string name="login">Login</string>
+    <string name="subtitle">Your Emotional \Support Buddy</string>
+    <string name="hint_pass">Password</string>
+    <string name="hint_email">Email</string>
+    <string name="forget_pass">Forget Password?</string>
+    <string name="have_account">Don\'t have an account? Sign In</string>
+    <string name="started">Get Started</string>
+    <string name="hint_name">Name</string>
 </resources>
