--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="have_account">Don\'t have an account? Sign In</string>
     <string name="started">Get Started</string>
     <string name="hint_name">Name</string>
+    <string name="welcome">Welcome to</string>
 </resources>
