--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">EmotiCare</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="greetings">Hello $name, How you feel today?</string>
+    <string name="greetings">Hello $name</string>
+    <string name="question">How are you feeling today?</string>
     <string name="title_article">Explore Article</string>
     <string name="signin">Sign In</string>
     <string name="login">Login</string>
