--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">EmotiCare</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
     <string name="greetings">Hello $name</string>
     <string name="question">How are you feeling today?</string>
     <string name="title_article">Explore Article</string>
@@ -10,7 +11,7 @@
     <string name="hint_pass">Password</string>
     <string name="hint_email">Email</string>
     <string name="forget_pass">Forget Password?</string>
-    <string name="have_account">Don\'t have an account? Sign In</string>
+    <string name="have_account">Don\'t have an account?</string>
     <string name="started">Get Started</string>
     <string name="hint_name">Name</string>
     <string name="welcome">Welcome to</string>
