--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EmotiCare</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
+    <string name="history">History</string>
     <string name="greetings">Hello $name</string>
     <string name="question">How are you feeling today?</string>
     <string name="title_article">Explore Article</string>
