--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="greetings">Hello $name</string>
     <string name="question">How are you feeling today?</string>
     <string name="title_article">Explore Article</string>
-    <string name="signin">Sign In</string>
+    <string name="register">Register</string>
     <string name="login">Login</string>
     <string name="subtitle">Your Emotional \Support Buddy</string>
     <string name="hint_pass">Password</string>
