--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="history">History</string>
-    <string name="greetings">Hello $name</string>
+    <string name="greetings">Welcome to EmotiCare</string>
     <string name="question">How are you feeling today?</string>
     <string name="title_article">Explore Article</string>
     <string name="register">Register</string>
